--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@
         window.addEventListener('load', handleHashChange);
 
         // --- Firebase Authentication ---
-        let authForm, authEmailInput, authPasswordInput, authError, authSubmitBtn, toggleAuthModeBtn, authNameInput, authGenderSelect, authAgeInput;
+        let authForm, authEmailInput, authPasswordInput, authError, authSubmitBtn, toggleAuthModeBtn, authNameInput, authGenderSelect, authAgeInput, resendVerificationBtn;
         let loginStatusIndicator, menuLoginLink, menuProfileLink, menuOrdersLink, menuLogoutLink, profileEmailSpan, profilePicDisplay, editProfileBtn, editProfileModal, editProfileForm, editProfileNameInput, editProfilePicUrlInput, profileUserIdSpan;
         let isLoginMode = true; // Default to login mode
 
@@ -2363,7 +2363,7 @@
             const googleSignInBtn = document.getElementById('google-signin-btn');
             
             // Get resend verification button
-            const resendVerificationBtn = document.getElementById('resend-verification-btn');
+            resendVerificationBtn = document.getElementById('resend-verification-btn');
             
             // Add event listeners to hide resend button when user starts typing
             if (authEmailInput && resendVerificationBtn) {
