--- a/admin.html
+++ b/admin.html
@@ -2262,13 +2262,14 @@
     <script type="module">
         // Firebase Configuration (Placeholder)
         const firebaseConfig = {
-  apiKey: "AIzaSyBGh16sYlLk1e9nkhcLu7IPTZk807qeLZM",
-  authDomain: "test-60bf6.firebaseapp.com",
-  databaseURL: "https://test-60bf6-default-rtdb.firebaseio.com",
-  projectId: "test-60bf6",
-  storageBucket: "test-60bf6.firebasestorage.app",
-  messagingSenderId: "208881094528",
-  appId: "1:208881094528:web:114768e2de5956cae6fb65"
+const firebaseConfig = {
+  apiKey: "AIzaSyDTSCG-mP_Atcgpg1-JKhAlKKLjNug-PZk",
+  authDomain: "kirana-store-f55dd.firebaseapp.com",
+  databaseURL: "https://kirana-store-f55dd-default-rtdb.firebaseio.com",
+  projectId: "kirana-store-f55dd",
+  storageBucket: "kirana-store-f55dd.firebasestorage.app",
+  messagingSenderId: "584414364232",
+  appId: "1:584414364232:web:1a89c8c6b293be45e30e7d"
 };
 
         // Telegram Bot Configuration
